# t-vgm-fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: architecture.md  protocol-v1.md  recovery.md  roadmap.md
include/tumovgm/: bridge.h  dashboard.h  imu_service.h  protocol.h  protocol_ids.h  video_out.h
protocol/: protocol-v1.json
recovery/: stock-vgm-fw-0.1.0.json
src/: bridge.c  bridge_uart.c  bridge_uart.h  dashboard.c  imu_icm42688.c  imu_icm42688.h  imu_service.c  main.c  protocol.c  recovery_probe.c  video_out.c
tests/: bridge_host_test.c  dashboard_host_test.c  imu_service_host_test.c  protocol_host_test.c  test_bridge_host.py  test_build_firmware.py  test_dashboard_host.py  test_imu_service_host.py  test_inspect_uf2.py  test_make_firmware_manifest.py  test_protocol_host.py  test_protocol_schema.py
tools/: build_firmware.py  generate_protocol_constants.py  inspect_uf2.py  make_firmware_manifest.py
